--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <groupId>com.quartzdesk-executor</groupId>
   <artifactId>quartzdesk-executor-pom</artifactId>
   <packaging>pom</packaging>
-  <version>4.0.15</version>
+  <version>4.0.16-SNAPSHOT</version>
 
   <properties>
     <module.name>com.quartzdesk.executor</module.name>
