--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <properties>
     <module.name>com.quartzdesk.executor</module.name>
 
-    <com.quartzdesk.version>5.0.1</com.quartzdesk.version>
+    <com.quartzdesk.version>5.0.2-SNAPSHOT</com.quartzdesk.version>
 
     <!--
       Implementation-Vendor-Id used in manifests.
@@ -53,13 +53,14 @@
     <javax.servlet.jsp.jstl-api.version>1.2.2</javax.servlet.jsp.jstl-api.version>
     <javax.servlet.jsp.jstl-impl.version>1.2.5</javax.servlet.jsp.jstl-impl.version>
 
+    <java.xml.bind.version>2.3.3</java.xml.bind.version>
 
     <!--
       Most recent version that still supports Java 8.
     -->
     <org.hibernate.version>5.6.15.Final</org.hibernate.version>
 
-    <org.javassist.version>3.29.2-GA</org.javassist.version>
+    <org.javassist.version>3.30.2-GA</org.javassist.version>
 
     <!--
       Most recent version that still supports Java 8 and old javax.* packages.
@@ -69,12 +70,12 @@
     <!--
       Most recent version that still supports Java 8.
     -->
-    <org.slf4j.version>2.0.9</org.slf4j.version>
+    <org.slf4j.version>2.0.13</org.slf4j.version>
 
     <!--
       Most recent version that still supports Java 8.
     -->
-    <org.springframework.version>5.3.31</org.springframework.version>
+    <org.springframework.version>5.3.36</org.springframework.version>
   </properties>
 
   <name>QuartzDesk Executor</name>
@@ -263,7 +264,7 @@
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-text</artifactId>
-        <version>1.11.0</version>
+        <version>1.12.0</version>
       </dependency>
 
 
@@ -304,11 +305,44 @@
 
 
       <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>${java.xml.bind.version}</version>
+      </dependency>
+
+
+
+      <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-core</artifactId>
         <version>${org.hibernate.version}</version>
 
         <exclusions>
+
+          <!--
+            Java activation API already provided by org.hibernate:hibernate-core.
+          -->
+          <exclusion>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+          </exclusion>
+
+          <!--
+            A newer version of Java XML Binding API already provided by project as a runtime dependency.
+          -->
+          <exclusion>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+          </exclusion>
+
+          <!--
+            A newer version of Java XML Binding Runtime already provided by project as a runtime dependency.
+          -->
+          <exclusion>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+          </exclusion>
+
           <!--
             Excluded XML APIs because these APIs are already provided by JDK 1.6 and higher.
           -->
@@ -578,7 +612,7 @@
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.10.1</version>
+          <version>3.13.0</version>
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
@@ -596,13 +630,25 @@
 
         <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.5.0</version>
+
+          <dependencies>
+            <!--
+              Extra enforcer rules not provided by Maven Enforcer Plugin out of the box.
+              For example, enforceBytecodeVersion rule.
+            -->
+            <dependency>
+              <groupId>org.codehaus.mojo</groupId>
+              <artifactId>extra-enforcer-rules</artifactId>
+              <version>1.8.0</version>
+            </dependency>
+          </dependencies>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.3.0</version>
+          <version>3.4.1</version>
           <configuration>
             <archive>
               <!--
@@ -632,7 +678,7 @@
 
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>3.4.1</version>
+          <version>3.7.0</version>
           <configuration>
             <doclint>none</doclint>
             <quiet>true</quiet>
@@ -642,25 +688,25 @@
 
         <plugin>
           <artifactId>maven-release-plugin</artifactId>
-          <version>3.0.0-M6</version>
+          <version>3.0.1</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.3.0</version>
+          <version>3.3.1</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-source-plugin</artifactId>
-          <version>3.2.1</version>
+          <version>3.3.1</version>
         </plugin>
 
 
         <plugin>
           <artifactId>maven-toolchains-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.2.0</version>
         </plugin>
 
 
@@ -710,7 +756,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
-          <version>3.3.0</version>
+          <version>3.6.0</version>
         </plugin>
 
 
